
AC_INIT([gordon_bin_scripts],[0.1.0],[gordon@cshl.edu])
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE([])
AC_CONFIG_MACRO_DIR([m4])

AC_SUBST(VERSION)

AC_CONFIG_FILES( [
		  Makefile
		  scripts/Makefile
		  scripts/atexpand
		  scripts/atless
		  scripts/detect_tab_stops
		  scripts/dict
		  scripts/dudirs
		  scripts/filetype_size_breakdown
		  scripts/list_columns
		  scripts/make_balloon
		  scripts/nfs_iostat
		  scripts/ppsx
		  scripts/psx
		  scripts/rsx
		  scripts/sum_file_sizes
		  scripts/sumcol
		  scripts/tawk
		  scripts/xtime
		  ] )

dnl AC_CONFIG_FILES([foo], [chmod +x foo])

AC_OUTPUT()
