# Copyright (C) 2012 Assaf Gordon <gordon@cshl.edu>
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

bin_SCRIPTS = \
	atexpand \
	atless \
	detect_tab_stops \
	dict \
	dudirs \
	easyjoin \
	filetype_size_breakdown \
	list_columns \
	make_balloon \
	multijoin \
	nfs_iostat \
	ppsx \
	pss \
	psx \
	rsx \
	sort-header \
	sum_file_sizes \
	sumcol \
	tawk \
	tardir \
	tuniq \
	xtime \
	xxcat

